kube/services/netpolicy/gen3/public_netpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-public-ingress-to
spec:
  podSelector:
    matchLabels:
      public: "yes"
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: revproxy
      - podSelector:
          matchLabels:
            app: ambassador-gen3
      - podSelector:
          matchLabels:
            app: pcdcanalysistools
  policyTypes:
   - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-public-egress-to
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - revproxy
      - ambassador-gen3
  egress:
    - to:
      - podSelector:
          matchLabels:
            public: "yes"
  policyTypes:
   - Egress
