kube/services/netpolicy/gen3/vpc_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-vpc
spec:
  podSelector:
    matchLabels:
      netvpc: "yes"
  egress:
    - to:
      - ipBlock:
           cidr: 172.0.0.0/8
      - ipBlock:
           cidr: 10.0.0.0/8
  policyTypes:
   - Egress
